--- a/content/Solidworks2021 安裝配置.html
+++ b/content/Solidworks2021 安裝配置.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks 繪圖.html'>Solidworks 繪圖</a><ul class='dropdown'><li><a href='Solidworks 安裝配置.html'>Solidworks 安裝配置</a><li><a href='Solidworks操作流程.html'>Solidworks操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='Solvspace操作流程.html'>Solvspace操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
+                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks 繪圖.html'>Solidworks 繪圖</a><ul class='dropdown'><li><a href='Solidworks2021 安裝配置.html'>Solidworks2021 安裝配置</a><li><a href='Solidworks操作流程.html'>Solidworks操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='Solvspace操作流程.html'>Solvspace操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Solidworks 繪圖 << <a href='Solidworks 繪圖.html'>Previous</a> <a href='Solidworks操作流程.html'>Next</a> >> Solidworks操作流程<br /><h1>Solidworks 安裝配置</h1>
+    <div id="tipue_search_content">Solidworks 繪圖 << <a href='Solidworks 繪圖.html'>Previous</a> <a href='Solidworks操作流程.html'>Next</a> >> Solidworks操作流程<br /><h1>Solidworks2021 安裝配置</h1>
 <p></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></p>
 <h4>Solidworks 分別提供 2017 與 2020 版本:</h4>
