--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -171,7 +171,7 @@ end</span></span></pre>
 <p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD1 緣起說明與介紹</p>
 <p>請不要直接從找到的 CAD1 套件說明複製貼上, 而是應該要看完各種參考資料後, 重新打字彙整.</p>
-<h3>Solidworks 安裝配置</h3>
+<h3>Solidworks2021 安裝配置</h3>
 <p></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></p>
 <h4>Solidworks 分別提供 2017 與 2020 版本:</h4>
@@ -187,26 +187,20 @@ end</span></span></pre>
 <h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">求解空間：</span></span></h4>
 <p style="padding-left: 30px;">至 <a href="https://solvespace.com">https://solvespace.com</a> 下載或從 <a href="https://github.com/solvespace/solvespace">https://github.com/solvespace/solvespace</a> 下載原始碼, 以可攜程式系統自行編譯後使用.</p>
 <h3><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Solidworks操作流程</span></span></h3>
-<p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
 <p>CAD1 零組件繪圖教學影片 (Wink)</p>
-<p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
+<p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
 <h2>Solvespace繪圖</h2>
 <p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD2 緣起說明與介紹</p>
-<p>請不要直接從找到的 CAD2 套件說明複製貼上, 而是應該要看完各種參考資料後, 重新打字彙整.</p>
 <h3>Solvespace安裝配置</h3>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</span></span></p>
 <p>CAD2 套件下載安裝與配置</p>
-<p>CAD2 套件下載安裝與配置影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>套件下載安裝與配置影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</span></span></p>
+<p>CAD2 套件下載安裝與配置影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>套件下載安裝與配置影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
 <h3><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Solvspace操作流程</span></span></h3>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</span></span></p>
 <p>CAD2 零組件繪圖操作流程影片 (Youtube)</p>
 <p>CAD2 零組件繪圖教學影片 (Wink)</p>
-<p>CAD2 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</span></span></p>
+<p>CAD2 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
 <h2>運動場景</h2>
 <h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">加元1：</span></span></h4>
 <p style="padding-left: 30px;">CAD1 零件轉出後轉入 CoppeliaSim 操作影片 (Youtube)</p>
