--- a/config/content.htm
+++ b/config/content.htm
@@ -180,15 +180,8 @@ end</span></span></pre>
 <p>4.零件，組件和圖紙從一開始就可用。用戶無法在組件中應用配合，但仍可將組件放置到位。</p>
 <h4></h4>
 <h3>Solidworks2021 安裝配置</h3>
-<p><span style="color: #0000ff;"></span></p>
-<h4></h4>
 <p></p>
-<h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></h4>
-<h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></h4>
-<h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></h4>
-<h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></h4>
-<h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">求解空間：</span></span></h4>
-<p style="padding-left: 30px;">至 <a href="https://solvespace.com">https://solvespace.com</a> 下載或從 <a href="https://github.com/solvespace/solvespace">https://github.com/solvespace/solvespace</a> 下載原始碼, 以可攜程式系統自行編譯後使用.</p>
+<p><span style="color: #0000ff;"></span></p>
 <h3><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Solidworks操作流程</span></span></h3>
 <p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
 <p>CAD1 零組件繪圖教學影片 (Wink)</p>
@@ -203,8 +196,10 @@ end</span></span></pre>
 <p><span style="color: #000000;"> CAM 軟件<br/><strong>-</strong>機構設計 - 使用約束求解器模擬平面或空間鏈接，包括銷、球或滑動關節<br/><strong>-</strong>平面和實體幾何 - 用實時尺寸繪圖替換手工求解的三角函數和電子表格</span></p>
 <p></p>
 <h3>Solvespace安裝配置</h3>
-<p>CAD2 套件下載安裝與配置</p>
-<p>CAD2 套件下載安裝與配置影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>套件下載安裝與配置影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
+<p>How to downlod Solvespace?</p>
+<p>Teaching : <a href="https://youtu.be/WA30mcUVi6w">https://youtu.be/WA30mcUVi6w</a></p>
+<h4><span><span>求解空間：</span></span></h4>
+<p>至 <a href="https://solvespace.com">https://solvespace.com</a> 下載或從 <a href="https://github.com/solvespace/solvespace">https://github.com/solvespace/solvespace</a> 下載原始碼, 以可攜程式系統自行編譯後使用</p>
 <h3><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Solvspace操作流程</span></span></h3>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</span></span></p>
 <p>CAD2 零組件繪圖操作流程影片 (Youtube)</p>
