--- a/config/content.htm
+++ b/config/content.htm
@@ -180,7 +180,8 @@ end</span></span></pre>
 <p>4.零件，組件和圖紙從一開始就可用。用戶無法在組件中應用配合，但仍可將組件放置到位。</p>
 <h4></h4>
 <h3>Solidworks2021 安裝配置</h3>
-<p></p>
+<p>How to download Solidworks?</p>
+<p>Teaching:<a href="https://youtu.be/0cbrksHL9s8">https://youtu.be/0cbrksHL9s8</a></p>
 <p><span style="color: #0000ff;"></span></p>
 <h3><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Solidworks操作流程</span></span></h3>
 <p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
