--- a/content/Solidworks2021 安裝配置.html
+++ b/content/Solidworks2021 安裝配置.html
@@ -140,15 +140,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Solidworks 繪圖 << <a href='Solidworks 繪圖.html'>Previous</a> <a href='Solidworks操作流程.html'>Next</a> >> Solidworks操作流程<br /><h1>Solidworks2021 安裝配置</h1>
+<p>How to download Solidworks?</p>
+<p>Teaching:<a href="https://youtu.be/0cbrksHL9s8">https://youtu.be/0cbrksHL9s8</a></p>
 <p><span style="color: #0000ff;"></span></p>
-<h4></h4>
-<p></p>
-<h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></h4>
-<h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></h4>
-<h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></h4>
-<h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></h4>
-<h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">求解空間：</span></span></h4>
-<p style="padding-left: 30px;">至 <a href="https://solvespace.com">https://solvespace.com</a> 下載或從 <a href="https://github.com/solvespace/solvespace">https://github.com/solvespace/solvespace</a> 下載原始碼, 以可攜程式系統自行編譯後使用.</p>
 <br />Solidworks 繪圖 << <a href='Solidworks 繪圖.html'>Previous</a> <a href='Solidworks操作流程.html'>Next</a> >> Solidworks操作流程</div>
         
     <!-- footer -->
