--- a/content/Solidworks操作流程.html
+++ b/content/Solidworks操作流程.html
@@ -140,9 +140,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Solidworks2021 安裝配置 << <a href='Solidworks2021 安裝配置.html'>Previous</a> <a href='Solvespace繪圖.html'>Next</a> >> Solvespace繪圖<br /><h1>Solidworks操作流程</h1>
-<p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
-<p>CAD1 零組件繪圖教學影片 (Wink)</p>
-<p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
+<p><span>How to use Solidworks?</span></p>
+<p><span>Teaching:<a href="https://youtu.be/gtpOX4krs4E">https://youtu.be/gtpOX4krs4E</a></span></p>
+<p></p>
 <br />Solidworks2021 安裝配置 << <a href='Solidworks2021 安裝配置.html'>Previous</a> <a href='Solvespace繪圖.html'>Next</a> >> Solvespace繪圖</div>
         
     <!-- footer -->
