--- a/content/Solvspace操作流程.html
+++ b/content/Solvspace操作流程.html
@@ -140,10 +140,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Solvespace安裝配置 << <a href='Solvespace安裝配置.html'>Previous</a> <a href='運動場景.html'>Next</a> >> 運動場景<br /><h1>Solvspace操作流程</h1>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</span></span></p>
-<p>CAD2 零組件繪圖操作流程影片 (Youtube)</p>
-<p>CAD2 零組件繪圖教學影片 (Wink)</p>
-<p>CAD2 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
+<p><span>How to use Solvespace?</span></p>
+<p><span>Teaching:<a href="https://youtu.be/ksTnyrjiz_c">https://youtu.be/ksTnyrjiz_c</a></span></p>
+<p></p>
 <br />Solvespace安裝配置 << <a href='Solvespace安裝配置.html'>Previous</a> <a href='運動場景.html'>Next</a> >> 運動場景</div>
         
     <!-- footer -->
