--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -182,11 +182,13 @@ end</span></span></pre>
 <h3>Solidworks2021 安裝配置</h3>
 <p>How to download Solidworks?</p>
 <p>Teaching:<a href="https://youtu.be/0cbrksHL9s8">https://youtu.be/0cbrksHL9s8</a></p>
+<p></p>
+<p><span></span></p>
 <p><span style="color: #0000ff;"></span></p>
 <h3><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Solidworks操作流程</span></span></h3>
-<p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
-<p>CAD1 零組件繪圖教學影片 (Wink)</p>
-<p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
+<p><span>How to use Solidworks?</span></p>
+<p><span>Teaching:<a href="https://youtu.be/gtpOX4krs4E">https://youtu.be/gtpOX4krs4E</a></span></p>
+<p></p>
 <h2>Solvespace繪圖</h2>
 <p><span style="color: #0000ff;">緣起:</span></p>
 <p><span style="color: #0000ff;"><span style="color: #000000;">2013 年在Libre Graphics World上發表了對開發人員的簡短評論和採訪。而這篇評論稱讚 SolveSpace的<span style="color: #ff0000;">可執行文件小、先進的約束求解器和輸出格式範圍</span>。同一篇評論指出了一些缺點，主要是它對<span style="color: #ff0000;">布爾值的緩慢和有限的處理以及缺乏原生 Linux 支持</span>。但是，此後增加了本地 Linux 支持。</span><br/></span></p>
@@ -202,10 +204,9 @@ end</span></span></pre>
 <h4><span><span>求解空間：</span></span></h4>
 <p>至 <a href="https://solvespace.com">https://solvespace.com</a> 下載或從 <a href="https://github.com/solvespace/solvespace">https://github.com/solvespace/solvespace</a> 下載原始碼, 以可攜程式系統自行編譯後使用</p>
 <h3><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Solvspace操作流程</span></span></h3>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</span></span></p>
-<p>CAD2 零組件繪圖操作流程影片 (Youtube)</p>
-<p>CAD2 零組件繪圖教學影片 (Wink)</p>
-<p>CAD2 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
+<p><span>How to use Solvespace?</span></p>
+<p><span>Teaching:<a href="https://youtu.be/ksTnyrjiz_c">https://youtu.be/ksTnyrjiz_c</a></span></p>
+<p></p>
 <h2>運動場景</h2>
 <h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">加元1：</span></span></h4>
 <p style="padding-left: 30px;">CAD1 零件轉出後轉入 CoppeliaSim 操作影片 (Youtube)</p>
