--- a/content/W11 inspection.html
+++ b/content/W11 inspection.html
@@ -148,10 +148,11 @@ img.add_border {
 <p><span mce-data-marked="1">Assembly link : </span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/VzYvOpYzo7E" title="YouTube video player" width="1280"></iframe></p>
 <p></p>
-<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">SW transfer to CoppeliaSim: </span></span></span></p>
+<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">SW transfer to CoppeliaSim : </span></span></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/lUdV9gE4f3c" title="YouTube video player" width="1280"></iframe></p>
 <p></p>
-<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Simplified couple: </span></span></span></p><br />W11 << <a href='W11.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
+<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Simplified couple : </span></span></span></p>
+<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></span></p><br />W11 << <a href='W11.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
